feat: Initial commit for MVP of ssh-agent-mux with mux and client implementation
- Added protocol buffer definitions for command communication.
- Implemented mux agent to handle multiple SSH agent connections.
- Created mux client for interacting with the mux agent.
- Set up GitHub Actions workflows for CI and dependabot automerge.
- Configured golangci-lint with a strict linting setup.
- Established project structure with necessary configuration files.
- Removed obsolete Makefile and adjusted .gitignore accordingly.
- Modified api/commands.proto and generated commands.pb.go to replace single fallback socket path with a list of backend socket paths.
- Updated cmd/ssh-agent-mux to handle multiple backend agent sockets and added a --foreground flag to run without daemonizing.
- Add start_time field to Config message in commands.proto
- Update generated commands.pb.go to include start_time field
- Modify main.go to set start_time when creating Config
- Updated README.md with detailed overview, installation, usage, and architecture sections.
- Enhanced demo.sh script to showcase key features and usage scenarios of ssh-agent-mux.
- Add .goreleaser.yml for building and packaging the project
- Add GitHub Actions workflow to trigger releases on tag push
- Cleaned up magefile
- Added comments to all methods in the MuxClient struct to improve code documentation and clarity.
- This enhances maintainability and helps new developers understand the purpose of each method.

--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,5 @@
-# Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
-ssh-agent-mux
-
-# Test binary, built with `go test -c`
-*.test
-
-# Output of the go coverage tool
-*.out
-
 # Dependency directories
 vendor/
-
-# Go workspace file
-go.work
-go.work.sum
 
 # IDE and editor files
 .vscode/
@@ -29,3 +11,8 @@ go.work.sum
 # OS files
 .DS_Store
 Thumbs.db
+
+# Build artifacts
+/.makefiles
+/artifacts
+/dist
