--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -38,14 +38,11 @@ builds:
       - -trimpath
       - -v
     mod_timestamp: '{{ .CommitTimestamp }}'
-    goarm: [ '5', '6', '7' ]
-    goos: ['linux', 'darwin', 'windows']
-    goarch: ['amd64', 'arm', 'arm64']
+    goos: ['linux', 'darwin' ]
+    goarch: ['amd64', 'arm64']
     ignore:
-      - goos: windows
-        goarch: arm
-      - goos: windows
-        goarch: arm64
+      - goos: darwin
+        goarch: amd64
 
 archives:
   - allow_different_binary_count: true
